Mudei o css e testei as questões de resto eu tento arrumar dps perdi a paciencia kk

--- a/assets/css/end.css
+++ b/assets/css/end.css
@@ -26,7 +26,7 @@
 
 h1 {
     font-size: 3.4rem;
-    color: #56a5eb;
+    color: yellow;
     margin-bottom: .4rem;
 }
 
@@ -38,28 +38,28 @@ h1 {
     cursor: not-allowed;
     box-shadow: none;
     transform: none;
-    color: #007bff;
-    background: rgb(248, 248, 248);
-    border: 1px solid #007bff;
+    color: yellow;
+    background: #0a0a0a;
+    border: 1px solid #0a0a0a;
 }
 
 .container #go_home {
     font-size: 20px;
     font-weight: 500;
-    color: #007bff;
+    color: yellow;
     padding: 15px 35px;
     outline: none;
     border: none;
     border-radius: 5px;
-    background: #fff;
-    border: 1px solid #007bff;
+    background: #0a0a0a;
+    border: 1px solid #0a0a0a;
     cursor: pointer;
     text-decoration: none;
 }
 
 .container #go_home:hover {
-    color: #fff;
-    background: #007bff;
+    color: yellow;
+    background: #0a0a0a;
     transform: scale(1.025);
 }
 
@@ -68,14 +68,14 @@ input[type=text] {
     padding: 14px 20px;
     margin: 4px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 1px solid #b40000;
     border-radius: 4px;
     box-sizing: border-box;
 }
 
 button {
     width: 25%;
-    background-color: #56a5eb;
+    background-color: #0a0a0a;
     color: white;
     padding: 14px 20px;
     margin: 4px 0;
@@ -85,7 +85,7 @@ button {
 }
 
 button:hover {
-    background-color: #007bff;
+    background-color: #b40000;
 }
 
 .container form {
