--- a/assets/css/highscores.css
+++ b/assets/css/highscores.css
@@ -26,7 +26,7 @@
 
 h1 {
     font-size: 3.4rem;
-    color: #56a5eb;
+    color: yellow;
     margin-bottom: 1.5rem;
 }  
 
@@ -34,7 +34,7 @@ h1 {
     display: none;
 }
 
-.btn[disabled]:hover {
+.btn:hover {
     cursor: not-allowed;
     box-shadow: none;
     transform: none;
@@ -62,19 +62,19 @@ h1 {
 .container #go_home {
     font-size: 20px;
     font-weight: 500;
-    color: #007bff;
+    color: yellow;
     padding: 15px 35px;
     outline: none;
     border: none;
     border-radius: 5px;
-    background: #fff;
-    border: 1px solid #007bff;
+    background: #0a0a0a;
+    border: 1px solid #0a0a0a;
     cursor: pointer;
     text-decoration: none;
 }
 
 .container #go_home:hover {
-    color: #fff;
-    background: #007bff;
+    color: yellow;
+    background: #a30000;
     transform: scale(1.025);
 }
