--- a/assets/css/end.css
+++ b/assets/css/end.css
@@ -26,7 +26,7 @@
 
 h1 {
     font-size: 3.4rem;
-    color: yellow;
+    color: rgb(229, 255, 0);
     margin-bottom: .4rem;
 }
 
@@ -51,7 +51,7 @@ h1 {
     outline: none;
     border: none;
     border-radius: 5px;
-    background: #0a0a0a;
+    background: #2c2c2c;
     border: 1px solid #0a0a0a;
     cursor: pointer;
     text-decoration: none;
@@ -59,7 +59,7 @@ h1 {
 
 .container #go_home:hover {
     color: yellow;
-    background: #0a0a0a;
+    background: #d30000;
     transform: scale(1.025);
 }
 
@@ -95,4 +95,17 @@ button:hover {
 
 .container #end {
     width: 100%;
+    color: yellow
+}
+
+.container #saveScoreBtn {
+    color: yellow;
+    background-color: #2c2c2c;
+    border: #0a0a0a;
+}
+
+.container #saveScoreBtn:hover {
+    color: yellow;
+    background-color: #b40000;
+    border: #0a0a0a;
 }
